force-app/main/default/objects/ConsensusDefaults__c/ConsensusDefaults__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Consensus Default Values</label>
</CustomObject>