force-app/main/default/objects/ConsensusDefaults__c/fields/Accounting_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Rule_Name__c</fullName>
    <label>Accounting Rule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>