force-app/main/default/objects/ConsensusDefaults__c/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <label>Conversion Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>