force-app/main/default/objects/ConsensusDefaults__c/fields/Future1__c.field-meta.xml
<CustomField>
    <fullName>Future1__c</fullName>
    <label>Future1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>