force-app/main/default/objects/ConsensusDefaults__c/fields/Future2__c.field-meta.xml
<CustomField>
    <fullName>Future2__c</fullName>
    <label>Future2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>