force-app/main/default/objects/ConsensusDefaults__c/fields/Future3__c.field-meta.xml
<CustomField>
    <fullName>Future3__c</fullName>
    <label>Future3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>