force-app/main/default/objects/ConsensusDefaults__c/fields/Payment_Terms_New__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_New__c</fullName>
    <label>Payment Terms New</label>
    <length>255</length>
    <type>Text</type>
</CustomField>