force-app/main/default/objects/ConsensusDefaults__c/fields/Segment1__c.field-meta.xml
<CustomField>
    <fullName>Segment1__c</fullName>
    <label>Segment1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>