force-app/main/default/objects/ConsensusDefaults__c/fields/Segment2__c.field-meta.xml
<CustomField>
    <fullName>Segment2__c</fullName>
    <label>Segment2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>