force-app/main/default/objects/ConsensusDefaults__c/fields/Segment3__c.field-meta.xml
<CustomField>
    <fullName>Segment3__c</fullName>
    <label>Segment3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>